Fix thread background when window is too narrow

--- a/src/modules/main/chat/_thread.scss
+++ b/src/modules/main/chat/_thread.scss
@@ -120,7 +120,7 @@
 }
 
 // Narrow window
-.theme-dark .layerContainer-2v_Sit{
+.theme-dark .chatLayerWrapper-2mgEK-{
     .container-3XgAHv{
         background-color: $SolidBackgroundFillColorBase;
         &.floating-3M3WeH{
